<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent" 
             android:layout_height="fill_parent" 
             android:padding="15dip"
             android:orientation="vertical" >
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent" 
             android:layout_height="wrap_content" 
             android:gravity="left"
             android:orientation="horizontal" >
   <TextView android:id = "@+id/status_paranoia"
   			android:textSize="15dip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
   <TextView android:id = "@+id/status_encryption"
   			android:textSize="15dip"
             android:layout_width="fill_parent"
             android:gravity="right"
             android:layout_height="wrap_content"/>
             </LinearLayout>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent" 
             android:layout_height="wrap_content" 
             android:gravity="center"
             android:orientation="horizontal" 
             >
             <TextView android:id="@+id/progress_1"
            android:text="Write Message >"
   			android:gravity="center"
   			android:textColor="#888"
   			android:textSize="15dip"
   			android:padding="2dip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
             <TextView android:id="@+id/progress_2"
            android:text="Record Audio >"
   			android:gravity="center"
   			android:textSize="15dip"
   			android:textColor="#888"
   			android:padding="2dip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
             <TextView android:id="@+id/progress_3"
            android:text="Share"
   			android:gravity="center"
   			android:textColor="#fff"
   			android:textSize="15dip"
   			android:padding="2dip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
             </LinearLayout>
   <TextView android:id="@+id/text"
   			android:textColor="#fff"
   			android:gravity="center"
   			android:textSize="15dip"
   			android:padding="5dip"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/p3_message" />
   <Button android:id="@+id/share"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/share"
             android:text="@string/share" />
   <Button android:id="@+id/multicast"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/multishare"
             android:text="@string/multicast" />
   <Button android:id="@+id/play"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/play"
             android:text="@string/play_encoded" />
   <Button android:id="@+id/extract"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/extract"
             android:text="@string/extract_data" />
   <TextView android:id="@+id/feedback_message"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
   			android:text = "@string/feedback_message"
   			/>
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   			android:gravity="bottom"
             android:layout_width="fill_parent" 
             android:layout_height="fill_parent" 
             android:orientation="horizontal" >
   <Button android:id="@+id/p3Back"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/left_arrow"
            android:text="@string/back_button" />
   <Button android:id="@+id/p3Next"
   			android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
             android:drawableRight="@drawable/right_arrow"
            android:text="@string/next_button" />
			</LinearLayout>
</LinearLayout>