<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent" 
             android:layout_height="fill_parent" 
             android:padding="15dip"
             android:orientation="vertical" >
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent" 
             android:layout_height="wrap_content" 
             android:gravity="left"
             android:orientation="horizontal" >
   <TextView android:id = "@+id/status_paranoia"
   			android:textSize="15dip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
   <TextView android:id = "@+id/status_encryption"
   			android:textSize="15dip"
             android:layout_width="fill_parent"
             android:gravity="right"
             android:layout_height="wrap_content"/>
             </LinearLayout>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent" 
             android:layout_height="wrap_content" 
             android:gravity="center"
             android:orientation="horizontal" 
             >
             <TextView android:id="@+id/progress_1"
            android:text="Write Message >"
   			android:gravity="center"
   			android:textSize="15dip"
   			android:textColor="#888"
   			android:padding="2dip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
             <TextView android:id="@+id/progress_2"
            android:text="Record Audio >"
   			android:gravity="center"
   			android:textSize="15dip"
   			android:textColor="#fff"
   			android:padding="2dip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
             <TextView android:id="@+id/progress_3"
            android:text="Share"
   			android:gravity="center"
   			android:textSize="15dip"
   			android:textColor="#888"
   			android:padding="2dip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
             </LinearLayout>
   <TextView android:id="@+id/text"
   			android:textColor="#fff"
   			android:textSize="15dip"
   			android:padding="5dip"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/p2_message" />
   <Button android:id="@+id/record"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/record"
             android:text="@string/record" />
   <Button android:id="@+id/play"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/play"
             android:enabled="false"
             android:text="@string/play_unencoded" />
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   			android:gravity="center"
             android:layout_width="fill_parent" 
             android:layout_height="wrap_content"
             android:layout_weight="1" 
             android:orientation="vertical" >
   <TextView android:id="@+id/counter"
             android:layout_width="fill_parent"
             android:textSize="100dip"
             android:gravity="center"
             android:layout_height="wrap_content"/>
   <TextView android:id="@+id/counterText"
   			 android:text="@string/counter_text"
             android:layout_width="fill_parent"
             android:gravity="center"
             android:layout_height="wrap_content"/>
             </LinearLayout>
   
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   			android:gravity="bottom"
             android:layout_width="fill_parent" 
             android:layout_height="wrap_content"
             android:layout_weight="0" 
             android:orientation="horizontal" >
   <Button android:id="@+id/p2Back"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/left_arrow"
            android:text="@string/back_button" />
   <Button android:id="@+id/p2Next"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:layout_height="wrap_content"
             android:drawableRight="@drawable/right_arrow"
            android:text="@string/next_button" />
			</LinearLayout>
</LinearLayout>